--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;1,300&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet">
     <!-- Link a pagina de estilos para Awesome On Scroll -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Link a Bootstrap -->
@@ -65,22 +66,22 @@
                                 Productos
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="/layouts/productos/calzado">Calzado</a>
+                                <li><a class="dropdown-item" href="layouts/productos/calzado">Calzado</a>
                                 </li>
-                                <li><a class="dropdown-item" href="/layouts/productos/accesorios">Accesorios</a></li>
-                                <li><a class="dropdown-item" href="/layouts/productos/regionales">Mates y
+                                <li><a class="dropdown-item" href="layouts/productos/accesorios">Accesorios</a></li>
+                                <li><a class="dropdown-item" href="layouts/productos/regionales">Mates y
                                         Regionales</a>
                                 </li>
                                 <li>
                             </ul>
                         <li class="nav-item">
-                            <a class="nav-link" href="/layouts/servicios">Servicios</a>
+                            <a class="nav-link" href="layouts/servicios">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/layouts/quienes_somos">Quienes Somos</a>
+                            <a class="nav-link" href="layouts/quienes_somos">Quienes Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/layouts/contacto">Contacto</a>
+                            <a class="nav-link" href="layouts/contacto">Contacto</a>
                         </li>
                         </li>
                     </ul>
