--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     <title>California Zapatero - Inicio</title>
     <script src="https://kit.fontawesome.com/9316c69995.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- Fuentes Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;1,300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Festive&family=Raleway:wght@100;400&display=swap"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet">
     <!-- Link a pagina de estilos para Awesome On Scroll -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Link a Bootstrap -->
