--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- META PARA ROBOTS BUSCADORES -->
     <meta name="robots" content="index,follow" />
     <!-- Favicon -->
-    <link rel="shortcut icon" href="//assets/images/logo_california.png" type="Logo California Zapatero">
+    <link rel="shortcut icon" href="./assets/images/logo_california.png" type="Logo California Zapatero">
     <!-- Titulo del Sitio -->
     <title>California Zapatero - Inicio</title>
     <script src="https://kit.fontawesome.com/9316c69995.js" crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
     <!-- Link a Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -39,18 +39,18 @@
         <div class="container">
             <div class="social__icons__header fixed-top justify-content-end">
                 <a href="https://instagram.com/californiazapatero" target="_blanck"><img class="social__image__header"
-                        src="/assets/images/instagram.png" alt="Instagram" /></a>
+                        src="./assets/images/instagram.png" alt="Instagram" /></a>
                 <a href="https://facebook.com/californiazapatero" target="_blank"><img class="social__image__header"
-                        src="/assets/images/facebook.png" alt="Facebook" /></a>
+                        src="./assets/images/facebook.png" alt="Facebook" /></a>
                 <a href="#" target="_blank">
-                    <img class="social__image__header" src="/assets/images/whatsapp.png" alt="Whatsapp" /></a>
+                    <img class="social__image__header" src="./assets/images/whatsapp.png" alt="Whatsapp" /></a>
                 <a href="mailto:californiazapatero@gmail.com" target="_blank">
-                    <img class="social__image__header" src="/assets/images/email.png" alt="Email" /></a>
+                    <img class="social__image__header" src="./assets/images/email.png" alt="Email" /></a>
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top m-auto">
             <div class="container-fluid">
-                <img src="/assets/images/logo_california.png" a class="navbar__brand" href="index.html"></img>
+                <img src="./assets/images/logo_california.png" a class="navbar__brand" href="index.html"></img>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
