--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <header>
         <div class="container">
             <div class="social__icons__header fixed-top justify-content-end">
-                <a href="https://instagram.com/californiazapatero" target="_blanck"><img class="social__image__header"
+                <a href="https://instagram.com/californiazapatero" target="_blank"><img class="social__image__header"
                         src="./assets/images/instagram.png" alt="Instagram" /></a>
                 <a href="https://facebook.com/californiazapatero" target="_blank"><img class="social__image__header"
                         src="./assets/images/facebook.png" alt="Facebook" /></a>
@@ -50,7 +50,9 @@
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top m-auto">
             <div class="container-fluid">
-                <img src="./assets/images/logo_california.png" a class="navbar__brand" href="index.html"></img>
+                <a href="index.html"> <img src="./assets/images/logo_california.png" a class="navbar__brand">
+                </a>
+                <!-- <img src="./assets/images/logo_california.png" a class="navbar__brand" href="index.html"></img> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
